# BasicCarGame

./: .gitignore  CMakeLists.txt  Car.cpp  Car.h  README.md  RigidBody.cpp  RigidBody.h  TODO.md  Wheel.cpp  Wheel.h  constants.cpp  constants.h  main.cpp
include/config/: EngineConstants.h  PhysicsConstants.h
include/core/: RigidBody.h
include/rendering/: Camera.h  Ground.h
include/ui/: Dial.h  FreeBodyDiagram.h  GUI.h
include/vehicle/: Car.h  Engine.h  Gearbox.h
src/control/: TractionControl.cpp
src/core/: RigidBody.cpp
src/rendering/: Camera.cpp  Ground.cpp
src/ui/: Dial.cpp  FreeBodyDiagram.cpp  GUI.cpp
src/vehicle/: Car.cpp  Engine.cpp  Gearbox.cpp  Wheel.cpp
